test folder structure improved.

--- a/bugs/bug-one-backButton/OpenWeather_Regression_Test.html
+++ b/bugs/bug-one-backButton/OpenWeather_Regression_Test.html
@@ -196,7 +196,7 @@
 	at org.testng.Assert.fail(Assert.java:110)
 	at org.testng.Assert.failNotEquals(Assert.java:1577)
 	at org.testng.Assert.assertFalse(Assert.java:78)
-	at com.giancodes.desktopTests.signInPageTests.SignOutTest.logOutGoBackTest(SignOutTest.java:54)
+	at com.giancodes.desktopTests.authentication.signInPageTests.signOut.SignOutTest.logOutGoBackTest(SignOutTest.java:54)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)
 	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
